--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       </p>
 
       <div class="socials">
-        <a href="https://github.com/YusufAli" target="_blank" title="GitHub"><i class='bx bxl-github'></i></a>
+        <a href="https://github.com/yulo2701/" target="_blank" title="GitHub"><i class='bx bxl-github'></i></a>
         <a href="https://www.linkedin.com/in/yusuf-a-b0b190245/" target="_blank" title="LinkedIn"><i class='bx bxl-linkedin'></i></a>
         <a href="mailto:yusuf27@hotmail.no" title="E-post"><i class='bx bx-envelope'></i></a>
         <a href="tel:+4740197486" title="Telefon"><i class='bx bx-phone'></i></a>
